<resources>
    <string name="app_name">Money Management</string>
    <string name="title_activity_main">Money Management</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_transfer">Transfer</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_income">Add Income</string>
    <string name="title_activity_add_outcome">Add Expense</string>
    <string name="title_activity_add_transfer">Add Transfer</string>
    <string name="title_activity_history_transfer">Transfer History</string>
    <string name="menu_home">Home</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_reports">Reports</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="headline_hello_str">Hello</string>
    <string name="headline_user_str">user</string>
    <string name="about_title">About Money Management</string>
    <string name="about_text_top">This application is developed by Andronomy Studio. Visit our website to ge the most out of its features. Icons by: www.androidicons.com, www.icons8.com and Google Material Icons.</string>
    <string name="about_text_bottom">Manage your money, manage your life.\nCopyright © 2015 - Andronomy Studio.</string>
    <string name="income_text">Add Income</string>
    <string name="outcome_text">Add Expense</string>
    <string name="action_add_acount">Add Account</string>
    <string name="save_settings_btn">Save settings</string>
    <string name="button_submit">Submit</string>
    <string name="cancel_str">Cancel</string>
    <string name="add_transfer_btn">Add Transfer</string>
    <string name="visit_button">Visit Website</string>
    <string name="notes_submit">Enter Notes Here (Optional) …</string>
    <string name="amount_submit">Enter Amount Here …</string>
    <string name="choose_cat_label">Choose category:</string>
    <string name="choose_acc_label">Choose account:</string>
    <string name="acc_to_label">Account to:</string>
    <string name="acc_from_label">Account from:</string>
    <string name="choose_lang_label">Choose your Language:</string>
    <string name="choose_curr_label">Choose your currency:</string>
    <string name="to_acc_str">To Account:</string>
    <string name="from_acc_str">From Account:</string>
    <string name="settings_saved_str">Settings has been saved!</string>
    <string name="cancelled_str">Cancelled</string>
    <string name="warn_success_input">Data successfully inserted!</string>
    <string name="warn_failed_input">Error occurred</string>
    <string name="selected_date_str">"Selected date is "</string>
    <string name="no_data_recycler">There are no data to be displayed.</string>
    <string name="no_data_warning">There are no data to display in the chart.</string>
    <string name="month_statistics_chart">This month expenses chart.</string>
    <string name="banner_ad_unit_id">ca-app-pub-3245172177688438/6821859504</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3245172177688438/5345126301</string>
    <string name="eng_us_str">United States</string>
    <string name="eng_uk_str">United Kingdom</string>
    <string name="account_cash">Cash</string>
    <string name="account_payment_card">Payment Card</string>
    <string name="category_deposit">Deposit</string>
    <string name="category_reward">Reward</string>
    <string name="category_salary">Salary</string>
    <string name="category_savings">Savings</string>
    <string name="category_bills">Bills</string>
    <string name="category_car">Car</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_communication">Communication</string>
    <string name="category_computer">Computer</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_eating">Eating</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_food">Food</string>
    <string name="category_health">Health</string>
    <string name="category_house">House</string>
    <string name="category_pets">Pets</string>
    <string name="category_sport">Sport</string>
    <string name="category_toiletry">Toiletry</string>
    <string name="category_transportation">Transportation</string>
    <string name="curr_aed">United Arab Emirates Dirham</string>
    <string name="curr_afn">Afghanistan Afghani</string>
    <string name="curr_all">Albania Lek</string>
    <string name="curr_amd">Armenia Dram</string>
    <string name="curr_ang">Netherlands Antilles Guilder</string>
    <string name="curr_aoa">Angola Kwanza</string>
    <string name="curr_ars">Argentina Peso</string>
    <string name="curr_aud">Australia Dollar</string>
    <string name="curr_awg">Aruba Guilder</string>
    <string name="curr_azn">Azerbaijan New Manat</string>
    <string name="curr_bam">Bosnia and Herzegovina Convertible Marka</string>
    <string name="curr_bbd">Barbados Dollar</string>
    <string name="curr_bdt">Bangladesh Taka</string>
    <string name="curr_bgn">Bulgaria Lev</string>
    <string name="curr_btn">Bhutan Ngultrum</string>
    <string name="curr_bwp">Burundi Franc</string>
    <string name="curr_byr">Belarus Ruble</string>
    <string name="curr_bzd">Belize Dollar</string>
    <string name="curr_cad">Canada Dollar</string>
    <string name="curr_cdf">Congo/Kinshasa Franc</string>
    <string name="curr_chf">Switzerland Franc</string>
    <string name="curr_clp">Chile Peso</string>
    <string name="curr_cny">China Yuan Renminbi</string>
    <string name="curr_cop">Colombia Peso</string>
    <string name="curr_crc">Costa Rica Colon</string>
    <string name="curr_cuc">Cuba Convertible Peso</string>
    <string name="curr_cup">Cuba Peso</string>
    <string name="curr_cve">Cape Verde Escudo</string>
    <string name="curr_czk">Czech Republic Koruna</string>
    <string name="curr_djf">Djibouti Franc</string>
    <string name="curr_dkk">Denmark Krone</string>
    <string name="curr_dop">Dominican Republic Peso</string>
    <string name="curr_dzd">Algeria Dinar</string>
    <string name="curr_egp">Egypt Pound</string>
    <string name="curr_ern">Eritrea Nakfa</string>
    <string name="curr_etb">Ethiopia Birr</string>
    <string name="curr_eur">Euro</string>
    <string name="curr_fjd">Fiji Dollar</string>
    <string name="curr_fkp">Falkland Islands (Malvinas) Pound</string>
    <string name="curr_gbp">United Kingdom Pound</string>
    <string name="curr_gel">Georgia Lari</string>
    <string name="curr_ghs">Ghana Cedi</string>
    <string name="curr_gip">Gibraltar Pound</string>
    <string name="curr_gmd">Gambia Dalasi</string>
    <string name="curr_gnf">Guinea Franc</string>
    <string name="curr_gtq">Guatemala Quetzal</string>
    <string name="curr_gwp">Guinea Peso</string>
    <string name="curr_gyd">Guyana Dollar</string>
    <string name="curr_hkd">Hong Kong Dollar</string>
    <string name="curr_hnl">Honduras Lempira</string>
    <string name="curr_hrk">Croatia Kuna</string>
    <string name="curr_htg">Haiti Gourde</string>
    <string name="curr_huf">Hungary Forint</string>
    <string name="curr_idr">Indonesia Rupiah</string>
    <string name="curr_ils">Israel Shekel</string>
    <string name="curr_inr">India Rupee</string>
    <string name="curr_iqd">Iraq Dinar</string>
    <string name="curr_irr">Iran Rial</string>
    <string name="curr_isk">Iceland Krona</string>
    <string name="curr_jmd">Jamaica Dollar</string>
    <string name="curr_jod">Jordan Dinar</string>
    <string name="curr_jpy">Japan Yen</string>
    <string name="curr_kes">Kenya Shilling</string>
    <string name="curr_kgs">Kyrgyzstan Som</string>
    <string name="curr_khr">Cambodia Riel</string>
    <string name="curr_kmf">Comoros Franc</string>
    <string name="curr_kpw">North Korea Won</string>
    <string name="curr_krw">South Korea Won</string>
    <string name="curr_kwd">Kuwait Dinar</string>
    <string name="curr_kyd">Cayman Islands Dollar</string>
    <string name="curr_kzt">Kazakhstan Tenge</string>
    <string name="curr_lak">Laos Kip</string>
    <string name="curr_lbp">Lebanon Pound</string>
    <string name="curr_lkr">Sri Lanka Rupee</string>
    <string name="curr_lrd">Liberia Dollar</string>
    <string name="curr_lsl">Lesotho Loti</string>
    <string name="curr_ltl">Lithuania Litas</string>
    <string name="curr_lvl">Latvia Lats</string>
    <string name="curr_lyd">Libya Dinar</string>
    <string name="curr_mad">Morocco Dirham</string>
    <string name="curr_mdl">Moldova Leu</string>
    <string name="curr_mga">Madagascar Ariary</string>
    <string name="curr_mkd">Macedonia Denar</string>
    <string name="curr_mmk">Myanmar Burma Kyat</string>
    <string name="curr_mnt">Mongolia Tughrik</string>
    <string name="curr_mop">Macau Pataca</string>
    <string name="curr_mro">Mauritania Ouguiya</string>
    <string name="curr_mur">Mauritius Rupee</string>
    <string name="curr_mvr">Maldives Islands Rufiyaa</string>
    <string name="curr_mwk">Malawi Kwacha</string>
    <string name="curr_mxn">Mexico Peso</string>
    <string name="curr_myr">Malaysia Ringgit</string>
    <string name="curr_mze">Mozambique Escudo</string>
    <string name="curr_mzn">Mozambique Metical</string>
    <string name="curr_nad">Namibia Dollar</string>
    <string name="curr_ngn">Nigeria Naira</string>
    <string name="curr_nio">Nicaragua Cordoba</string>
    <string name="curr_nok">Norway Krone</string>
    <string name="curr_nps">Nepal Rupee</string>
    <string name="curr_nzd">New Zealand Dollar</string>
    <string name="curr_omr">Oman Rial</string>
    <string name="curr_pab">Panama Balboa</string>
    <string name="curr_pen">Peru Nuevo Sol</string>
    <string name="curr_pgk">Papua New Guinea Kina</string>
    <string name="curr_php">Philippines Peso</string>
    <string name="curr_pkr">Pakistan Rupee</string>
    <string name="curr_pln">Poland Zloty</string>
    <string name="curr_pyg">Paraguay Guarani</string>
    <string name="curr_qar">Qatar RIyal</string>
    <string name="curr_ron">Romania New Leu</string>
    <string name="curr_rsd">Serbia Dinar</string>
    <string name="curr_rub">Russia Ruble</string>
    <string name="curr_rwf">Rwanda Franc</string>
    <string name="curr_sar">Saudi Arabia Riyal</string>
    <string name="curr_sbd">Solomon Islands Dollar</string>
    <string name="curr_scr">Seychelles Rupee</string>
    <string name="curr_sdg">Sudan Pound</string>
    <string name="curr_sek">Sweden Krona</string>
    <string name="curr_sgd">Singapore Dollar</string>
    <string name="curr_shp">Saint Helena Pound</string>
    <string name="curr_skk">Slowakia Koruna</string>
    <string name="curr_sll">Sierra Leone Leone</string>
    <string name="curr_sos">Somalia Shilling</string>
    <string name="curr_srd">Suriname Dollar</string>
    <string name="curr_ssp">South Sudan Pound</string>
    <string name="curr_std">São Tomé and Príncipe Dobra</string>
    <string name="curr_svc">El Salvador Colon</string>
    <string name="curr_syp">Syria Pound</string>
    <string name="curr_szl">Swaziland Lilangeni</string>
    <string name="curr_thb">Thailand Baht</string>
    <string name="curr_tjs">Tajikistan Somoni</string>
    <string name="curr_tmt">Turkmenistan Manat</string>
    <string name="curr_tnd">Tunisia Dinar</string>
    <string name="curr_top">Tonga Pa\'anga</string>
    <string name="curr_try">Turkey Lira</string>
    <string name="balance_wallet_icon">Balance Wallet Icon</string>
    <string name="my_income">My Incomes</string>
    <string name="my_outcome">My Expenses</string>
    <string name="transfer_history">Transfer History</string>
</resources>