<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_action_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/accounts_menu"
        android:icon="@drawable/ic_action_creditcard"
        android:title="@string/menu_accounts" />

    <item
        android:id="@+id/history_menu"
        android:icon="@drawable/ic_action_document"
        android:title="@string/menu_history" />

    <item
        android:id="@+id/settings_menu"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/about_menu"
        android:icon="@drawable/ic_action_info"
        android:title="@string/menu_about" />
</menu>